# rudiments

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
assets/instrumentations/: linndrum
assets/patterns/: burning-up  get-a-little  i-wanna-dance-with-somebody  never-gonna-give-you-up  standard  thriller  tom-sawyer
assets/samples/linndrum/: README.md
src/: audio.rs  error.rs  instrumentation.rs  main.rs  pattern.rs
