[package]
name = "rudiments"
version = "0.1.1"
authors = ["Jonas Michel <jonasrmichel@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A step-sequencing drum machine"
readme = "README.md"
keywords = ["audio", "playback", "drum-machine", "rhythm", "percussion"]
categories = ["multimedia::audio", "command-line-utilities"]
repository = "https://github.com/jonasrmichel/rudiments"
homepage = "https://github.com/jonasrmichel/rudiments"
documentation = "http://docs.rs/rudiments"
edition = "2018"

[dependencies]
bitvec = "0.18.1"
clap = "3.0.0-beta.5"
hound = "3.4.0"
nom = "7"
rodio = "0.11.0"
thiserror = "1.0"
